Co-authored-by: JuanSiglerASC <JuanSiglerASC@users.noreply.github.com> Co-authored-by: IsamelASC22 <IsamelASC22@users.noreply.github.com>

--- a/survey/index.html
+++ b/survey/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="survey-button">
-        <a href="survey/index.html" target="_blank"><button id="goto-survey" type="button" onclick="alert('Answer Truthfully')">Calculate Your Footprint Now!</button></a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><button id="goto-survey" type="button" onclick="alert('Hello world!')">Calculate Your Footprint Now!</button></a>
     </div>
 </body>
 </html>
