Co-authored-by: JuanSiglerASC <JuanSiglerASC@users.noreply.github.com>

--- a/survey/survey2/index.html
+++ b/survey/survey2/index.html
@@ -11,17 +11,17 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>What method of transport do you commonly use?</h1>
+        <h1>How often do you carpool?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
             <form>
                 <input type="radio" id="html" name="fav_language" value="HTML">
-                <label for="html">Personal Motor Vehicle</label><br>
+                <label for="html">Commonly</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
-                <label for="css">Public Transportation</label><br>
+                <label for="css">Rarely</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                <label for="javascript">Personal Vehicles such as: -bikes -scooters -skateboards</label>
+                <label for="javascript">Never</label>
           </form>
     </div>
 
