Co-authored-by: JuanSiglerASC <JuanSiglerASC@users.noreply.github.com> Co-authored-by: VictorASC22 <VictorASC22@users.noreply.github.com>

--- a/survey/survey2/survey3/survey4/survey5/survey6/survey7/index.html
+++ b/survey/survey2/survey3/survey4/survey5/survey6/survey7/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>How often do you carpool?</h1>
+        <h1>do you order food or take out?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
             <form>
                 <input type="radio" id="html" name="fav_language" value="HTML">
-                <label for="html">Commonly</label><br>
+                <label for="html">most days</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
-                <label for="css">Rarely</label><br>
+                <label for="css">somedays</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
                 <label for="javascript">Never</label>
           </form>
@@ -27,6 +27,6 @@
 
     <!--here-->
    
-    <a href="survey8/index.html" target="_blank"><input type="button" class="button" value="Submit"></a>
+    <a href="survey8/index.html"><input type="button" class="button" value="Submit"></a>
 </body>
 </html>
