--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         </div>
 
         <div id="description1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>you may be asking yourself what is a carbon footprint? dont worry we have the answer for you!!. in the most basic way of explaining it a carbon foorprint is the way to track the amout of green house gas emmisions left by an individual.
+                you may be asking why do we want to get the GHG emissions for an individual? the reason fo this is to know how we are empacting the enviroment and find a solution for what are some of the things we can do to help. the enviroment is in disasters and its not looking good for the future we should help right?. 
+                little do people know that their every day actions is impacting the enviroment, a carbon footprint should help you see how you are impacting the enviroment and what you can do to help, although people mostly assume that it involves you driving a car and the emmisions its more diverse than that. the amount of meat that you eat to the ammount of appliances that you have plugged in can effect the enviroment.
+            </p>
         </div>
     </div>
 
@@ -35,12 +38,12 @@
             <h2 id="content">About the survey</h2>
         </div>
         <div id="description2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>this survey is for you to be able to see and tell the amount of carbon emmision you as an individual is leaving behind. the individual will get three outcomes if they are eco-friendy or not again we are not here to judge just help!!. the user will get to be able to either change the way that they live or just be more aware of the things that they can do to help. </p>
         </div>
     </div>
 
     <div class="survey-button">
-        <a href="survey/index.html" target="_blank"><button id="goto-survey" type="button" onclick="alert('Answer Truthfully')">Calculate Your Footprint Now!</button></a>
+        <a href="survey/index.html"><button id="goto-survey" type="button" onclick="alert('Answer Truthfully')">Calculate Your Footprint Now!</button></a>
     </div>
 </body>
 </html>
