--- a/survey/index.html
+++ b/survey/index.html
@@ -27,6 +27,6 @@
 
     <!--here-->
    
-    <a href="survey2/index.html" target="_blank"><input type="button" class="button" value="Submit"></a>
+    <a href="survey2/index.html"><input type="button" class="button" value="Submit"></a>
 </body>
 </html>
