--- a/survey/survey2/index.html
+++ b/survey/survey2/index.html
@@ -11,22 +11,22 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>How often do you carpool?</h1>
+        <h1>how many appliances do you have plugged in your household?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
             <form>
                 <input type="radio" id="html" name="fav_language" value="HTML">
-                <label for="html">Commonly</label><br>
+                <label for="html">more than 5</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
-                <label for="css">Rarely</label><br>
+                <label for="css">more than 10</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                <label for="javascript">Never</label>
+                <label for="javascript">more than 15</label>
           </form>
     </div>
 
     <!--here-->
    
-    <a href="survey3/index.html" target="_blank"><input type="button" class="button" value="Submit"></a>
+    <a href="survey3/index.html"><input type="button" class="button" value="Submit"></a>
 </body>
 </html>
