--- a/survey/survey2/survey3/survey4/survey5/index.html
+++ b/survey/survey2/survey3/survey4/survey5/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>How often do you carpool?</h1>
+        <h1>is your AC set to 75 or above every day?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
             <form>
                 <input type="radio" id="html" name="fav_language" value="HTML">
-                <label for="html">Commonly</label><br>
+                <label for="html">every day</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
-                <label for="css">Rarely</label><br>
+                <label for="css">some days</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
                 <label for="javascript">Never</label>
           </form>
@@ -27,6 +27,6 @@
 
     <!--here-->
    
-    <a href="survey6/index.html" target="_blank"><input type="button" class="button" value="Submit"></a>
+    <a href="survey6/index.html"><input type="button" class="button" value="Submit"></a>
 </body>
 </html>
