--- a/survey/survey2/survey3/survey4/survey5/survey6/survey7/survey8/survey9/index.html
+++ b/survey/survey2/survey3/survey4/survey5/survey6/survey7/survey8/survey9/index.html
@@ -11,22 +11,22 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>How often do you carpool?</h1>
+        <h1>do you have lights turned on when you are home?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
             <form>
                 <input type="radio" id="html" name="fav_language" value="HTML">
-                <label for="html">Commonly</label><br>
+                <label for="html">most lights</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
-                <label for="css">Rarely</label><br>
+                <label for="css">some lights on</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                <label for="javascript">Never</label>
+                <label for="javascript">just the room that im in!!</label>
           </form>
     </div>
 
     <!--here-->
    
-    <a href="survey10/index.html" target="_blank"><input type="button" class="button" value="Submit"></a>
+    <a href="survey10/index.html"><input type="button" class="button" value="Submit"></a>
 </body>
 </html>
