--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         </div>
 
         <div id="description1">
-            <p>you may be asking yourself what is a carbon footprint? dont worry we have the answer for you!!. in the most basic way of explaining it a carbon foorprint is the way to track the amout of green house gas emmisions left by an individual.
-                you may be asking why do we want to get the GHG emissions for an individual? the reason fo this is to know how we are empacting the enviroment and find a solution for what are some of the things we can do to help. the enviroment is in disasters and its not looking good for the future we should help right?. 
-                little do people know that their every day actions is impacting the enviroment, a carbon footprint should help you see how you are impacting the enviroment and what you can do to help, although people mostly assume that it involves you driving a car and the emmisions its more diverse than that. the amount of meat that you eat to the ammount of appliances that you have plugged in can effect the enviroment.
+            <p>You may be asking yourself what is a carbon footprint? Don't worry we have the answer for you!!. A carbon foorprint is the way to track the amout of green house gas emmisions left by an individual.
+                The reason for this is to know how we are impacting the enviroment and to find a solution some of the things we can do to help. The enviroment currently has disasters and its not bright for the future generations to come. 
+                Not many people know how much their every day actions impacts the enviroment, a carbon footprint will help one understand much you impact the enviroment.
+                Although people mostly assume that it involves you driving a car and the emmisions its more diverse than that. The amount of meat eaten to the ammount of appliances in use can affect the enviroment in different ways.
             </p>
         </div>
     </div>
@@ -38,7 +39,8 @@
             <h2 id="content">About the survey</h2>
         </div>
         <div id="description2">
-            <p>this survey is for you to be able to see and tell the amount of carbon emmision you as an individual is leaving behind. the individual will get three outcomes if they are eco-friendy or not again we are not here to judge just help!!. the user will get to be able to either change the way that they live or just be more aware of the things that they can do to help. </p>
+            <p> The survey you will take will ask questions that will help determine your carbon footprint.
+                And after the survey the results are based on the answers given.</p>
         </div>
     </div>
 
