--- a/survey/survey2/index.html
+++ b/survey/survey2/index.html
@@ -11,17 +11,17 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>how many appliances do you have plugged in your household?</h1>
+        <h1>How many appliances do you have plugged in or in use in your household?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
             <form>
                 <input type="radio" id="html" name="fav_language" value="HTML">
-                <label for="html">more than 5</label><br>
+                <label for="html">Between 1 and 9</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
-                <label for="css">more than 10</label><br>
+                <label for="css">Between 10 and 15</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                <label for="javascript">more than 15</label>
+                <label for="javascript">More than 15</label>
           </form>
     </div>
 
