--- a/survey/survey2/survey3/survey4/index.html
+++ b/survey/survey2/survey3/survey4/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>how many days do you eat meat?</h1>
+        <h1>How often do you eat meat?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
@@ -19,9 +19,9 @@
                 <input type="radio" id="html" name="fav_language" value="HTML">
                 <label for="html">every day</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
-                <label for="css">1-2 days</label><br>
+                <label for="css">3-5 days a week</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                <label for="javascript">1 day a week</label>
+                <label for="javascript">1 day weekly</label>
           </form>
     </div>
 
