--- a/survey/survey2/survey3/survey4/survey5/index.html
+++ b/survey/survey2/survey3/survey4/survey5/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>is your AC set to 75 or above every day?</h1>
+        <h1>Do you set your AC to 75 degrees or above?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
@@ -21,7 +21,7 @@
                 <input type="radio" id="css" name="fav_language" value="CSS">
                 <label for="css">some days</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                <label for="javascript">Never</label>
+                <label for="javascript">Rarely</label>
           </form>
     </div>
 
