--- a/survey/survey2/survey3/survey4/survey5/survey6/survey7/survey8/index.html
+++ b/survey/survey2/survey3/survey4/survey5/survey6/survey7/survey8/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>do you play games every day?</h1>
+        <h1>Do you play video games?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
             <form>
                 <input type="radio" id="html" name="fav_language" value="HTML">
-                <label for="html">yes i love games</label><br>
+                <label for="html">Very often</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
                 <label for="css">Rarely play games</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
