--- a/survey/survey2/survey3/survey4/survey5/survey6/survey7/survey8/survey9/survey10/eco-friendly/index.html
+++ b/survey/survey2/survey3/survey4/survey5/survey6/survey7/survey8/survey9/survey10/eco-friendly/index.html
@@ -26,7 +26,10 @@
         </div>
 
         <div id="description1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            <p>Despite your result here are some examples that you can do in your everyday life to help decrese the amount of (GHG) green house gasses you emit to the environment.
+            You may start by taking the transit instead of your vehicle if possible to work. Not only will it save you in money but it will also decrease the amount of GHG emited as a community.
+             Another example that can help you decrese your GHG emmisions is setting your AC to 75 and above. During a hot day it is possible to set the temperature a little higher when not at home.
+             By doing this, electric bills will be cut short considerably. An AC unit is the main reason that people end up paying a lot of money for electricity.
             </p>
         </div>
     </div>
@@ -36,7 +39,9 @@
             <h2 id="content">Your Results</h2>
         </div>
         <div id="description2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <p>You are eco-friendly, this means that you have already taken the first step to help the planet grow and prosper. This could mean you likely travel in bike, skateboard, or any non motorized vehicles. Being eco-friendly means that you are minorly contributing to the polution on Earth.
+                It may not be possible to remove damage already caused to the planet, however it is definately possible to halt the damage and consequences that are to come if the damage of pollution continues.
+            </p>
         </div>
     </div>
 </body>
