--- a/survey/survey2/survey3/survey4/survey5/survey6/survey7/survey8/survey9/survey10/index.html
+++ b/survey/survey2/survey3/survey4/survey5/survey6/survey7/survey8/survey9/survey10/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>do you spend a lot of time shoping or outside?</h1>
+        <h1>Do you spend a lot of time shoping?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
