--- a/survey/survey2/survey3/survey4/survey5/survey6/index.html
+++ b/survey/survey2/survey3/survey4/survey5/survey6/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>when eating do you have a balance deit of vegetables and meat?</h1>
+        <h1>Do you balance your diet with vegetables along with other food?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
             <form>
                 <input type="radio" id="html" name="fav_language" value="HTML">
-                <label for="html">every day</label><br>
+                <label for="html">Commonly</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
-                <label for="css">sometimes</label><br>
+                <label for="css">Sometimes</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
                 <label for="javascript">Never</label>
           </form>
