--- a/survey/survey2/survey3/survey4/survey5/survey6/survey7/index.html
+++ b/survey/survey2/survey3/survey4/survey5/survey6/survey7/index.html
@@ -11,17 +11,17 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>do you order food or take out?</h1>
+        <h1>Do you eat at home or do you eat out?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
             <form>
                 <input type="radio" id="html" name="fav_language" value="HTML">
-                <label for="html">most days</label><br>
+                <label for="html">Eat in restaurants commonly</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
-                <label for="css">somedays</label><br>
+                <label for="css">All my food is cooked at home</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                <label for="javascript">Never</label>
+                <label for="javascript">Eat out in special occasions</label>
           </form>
     </div>
 
