--- a/survey/survey2/survey3/survey4/survey5/survey6/survey7/survey8/survey9/index.html
+++ b/survey/survey2/survey3/survey4/survey5/survey6/survey7/survey8/survey9/index.html
@@ -11,17 +11,17 @@
 <body>
     <div class="questions">
         <div id="text">
-        <h1>do you have lights turned on when you are home?</h1>
+        <h1>Do you have lights turned on when you are home?</h1>
         <h2 id="select">Select One:</h2>
         </div>
 
             <form>
                 <input type="radio" id="html" name="fav_language" value="HTML">
-                <label for="html">most lights</label><br>
+                <label for="html">Most lights</label><br>
                 <input type="radio" id="css" name="fav_language" value="CSS">
-                <label for="css">some lights on</label><br>
+                <label for="css">A few lights</label><br>
                 <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                <label for="javascript">just the room that im in!!</label>
+                <label for="javascript">Just the room in use.</label>
           </form>
     </div>
 
